# slam_lab

./: .gitmodules  README.md
slambook2/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
slambook2/images/: CMakeLists.txt  cvBasics.cpp  cvOrb.cpp  posEstimation2d2d.cpp
slambook2/nonLinearOpt/: CMakeLists.txt  g2oCurveFitting.cpp  gaussNewton.cpp
slambook2/useEigen/: CMakeLists.txt  eigenMatrix.cpp
slambook2/useGeometry/: CMakeLists.txt  coordinateTransform.cpp  useGeometry.cpp  useSophus.cpp
